fix list books and cds

--- a/online-library-management-system/Areas/Admin/Views/Item/_FormPartial.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Item/_FormPartial.cshtml
@@ -4,73 +4,76 @@
     var action = Model.NewItem!.ItemId == 0 ? "Create" : "Edit";
 }
 
-<form class="form" asp-action="@action" asp-controller="Item" asp-area="Admin" method="post" enctype="multipart/form-data">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <div class="box-body">
-        <div class="form-group">
-            <label asp-for="NewItem.Title" class="form-label">Title</label>
-            <input asp-for="NewItem.Title" class="form-control" placeholder="Title" />
-            <span asp-validation-for="NewItem.Title" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="NewItem.Description" class="form-label">Description</label>
-            <textarea asp-for="NewItem.Description" class="form-control" placeholder="Description"></textarea>
-            <span asp-validation-for="NewItem.Description" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="NewItem.ItemType" class="form-label">Item Type</label>
-            <select asp-for="NewItem.ItemType" class="form-control select2">
-                <option value="">Select Type</option>
-                <option value="Book">Book</option>
-                <option value="CD">CD</option>
-            </select>
-            <span asp-validation-for="NewItem.ItemType" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="NewItem.CategoryId" class="form-label">Category</label>
-            <select asp-for="NewItem.CategoryId" class="form-control select2" asp-items="ViewBag.Categories">
-                <option value="">Select Category</option>
-            </select>
-            <span asp-validation-for="NewItem.CategoryId" class="text-danger"></span>
-        </div>
+@if (Model.NewItem != null)
+{
+    <form class="form" asp-action="@action" asp-controller="Item" asp-area="Admin" method="post" enctype="multipart/form-data">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="box-body">
+            <div class="form-group">
+                <label asp-for="NewItem.Title" class="form-label">Title</label>
+                <input asp-for="NewItem.Title" class="form-control" placeholder="Title" />
+                <span asp-validation-for="NewItem.Title" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NewItem.Description" class="form-label">Description</label>
+                <textarea asp-for="NewItem.Description" class="form-control" placeholder="Description"></textarea>
+                <span asp-validation-for="NewItem.Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NewItem.ItemType" class="form-label">Item Type</label>
+                <select asp-for="NewItem.ItemType" class="form-control select2">
+                    <option value="">Select Type</option>
+                    <option value="Book">Book</option>
+                    <option value="CD">CD</option>
+                </select>
+                <span asp-validation-for="NewItem.ItemType" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NewItem.CategoryId" class="form-label">Category</label>
+                <select asp-for="NewItem.CategoryId" class="form-control select2" asp-items="ViewBag.Categories">
+                    <option value="">Select Category</option>
+                </select>
+                <span asp-validation-for="NewItem.CategoryId" class="text-danger"></span>
+            </div>
 
-        <div class="form-group">
-            <label asp-for="NewItem.AuthorAndArtistId" class="form-label">Author/Artist</label>
-            <select asp-for="NewItem.AuthorAndArtistId" class="form-control select2" asp-items="ViewBag.AuthorsAndArtists">
-                <option value="">Select Author/Artist</option>
-            </select>
-            <span asp-validation-for="NewItem.AuthorAndArtistId" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="NewItem.PublishDate" class="form-label">Publish Date</label>
-            <input asp-for="NewItem.PublishDate" class="form-control" type="date" />
-            <span asp-validation-for="NewItem.PublishDate" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="NewItem.ISBN" class="form-label">ISBN</label>
-            <input asp-for="NewItem.ISBN" class="form-control" placeholder="ISBN" />
-            <span asp-validation-for="NewItem.ISBN" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="ImageFile" class="control-label">Upload Image</label>
-            <input asp-for="ImageFile" class="form-control" type="file" accept="image/*" onchange="previewImage(event)" />
-            <span asp-validation-for="ImageFile" class="text-danger"></span>
-            <br>
-            <div id="imagePreviewContainer" class="position-relative mt-4" style="@(Model.NewItem.ImagePath != null && Model.NewItem!.ItemId != 0 ? "display:inline-block;" : "display:none;")">
-                <a class="image-popup-vertical-fit" href="@(Model.NewItem.ImagePath != null && Model.NewItem!.ItemId != 0 ? Url.Content("~/images/books-media/" + Model.NewItem.ImagePath) : "#")" data-effect="mfp-zoom-in">
-                    <img id="imagePreview" src="@(Model.NewItem.ImagePath != null && Model.NewItem!.ItemId != 0 ? Url.Content("~/images/books-media/" + Model.NewItem.ImagePath) : "#")" class="rounded-0" alt="Image Preview" style="max-width: 200px; max-height: 200px;" />
-                </a>
-                <button type="button" id="removeImage" class="btn btn-danger btn-sm position-absolute" style="top: -15px; right: -15px;" onclick="removeImagePreview()">X</button>
-            </div>          
-        </div>
+            <div class="form-group">
+                <label asp-for="NewItem.AuthorAndArtistId" class="form-label">Author/Artist</label>
+                <select asp-for="NewItem.AuthorAndArtistId" class="form-control select2" asp-items="ViewBag.AuthorsAndArtists">
+                    <option value="">Select Author/Artist</option>
+                </select>
+                <span asp-validation-for="NewItem.AuthorAndArtistId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NewItem.PublishDate" class="form-label">Publish Date</label>
+                <input asp-for="NewItem.PublishDate" class="form-control" type="date" />
+                <span asp-validation-for="NewItem.PublishDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NewItem.ISBN" class="form-label">ISBN</label>
+                <input asp-for="NewItem.ISBN" class="form-control" placeholder="ISBN" />
+                <span asp-validation-for="NewItem.ISBN" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageFile" class="control-label">Upload Image</label>
+                <input asp-for="ImageFile" class="form-control" type="file" accept="image/*" onchange="previewImage(event)" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+                <br>
+                <div id="imagePreviewContainer" class="position-relative mt-4" style="@(Model.NewItem.ImagePath != null && Model.NewItem!.ItemId != 0 ? "display:inline-block;" : "display:none;")">
+                    <a class="image-popup-vertical-fit" href="@(Model.NewItem.ImagePath != null && Model.NewItem!.ItemId != 0 ? Url.Content("~/images/books-media/" + Model.NewItem.ImagePath) : "#")" data-effect="mfp-zoom-in">
+                        <img id="imagePreview" src="@(Model.NewItem.ImagePath != null && Model.NewItem!.ItemId != 0 ? Url.Content("~/images/books-media/" + Model.NewItem.ImagePath) : "#")" class="rounded-0" alt="Image Preview" style="max-width: 200px; max-height: 200px;" />
+                    </a>
+                    <button type="button" id="removeImage" class="btn btn-danger btn-sm position-absolute" style="top: -15px; right: -15px;" onclick="removeImagePreview()">X</button>
+                </div>
+            </div>
 
-    </div>
-    <div class="box-footer text-end">
-        <button type="submit" class="btn btn-primary">
-            <i class="ti-save-alt"></i> Save
-        </button>
-        <a asp-area="Admin" asp-action="Index" asp-controller="Item" role="button" class="btn btn-warning me-1">
-            <i class="ti-trash"></i> Cancel
-        </a>
-    </div>
-</form>
+        </div>
+        <div class="box-footer text-end">
+            <button type="submit" class="btn btn-primary">
+                <i class="ti-save-alt"></i> Save
+            </button>
+            <a asp-area="Admin" asp-action="Index" asp-controller="Item" role="button" class="btn btn-warning me-1">
+                <i class="ti-trash"></i> Cancel
+            </a>
+        </div>
+    </form>
+ }
