--- a/online-library-management-system/wwwroot/css/style.css
+++ b/online-library-management-system/wwwroot/css/style.css
@@ -4897,7 +4897,7 @@ input[type="button"].btn-block {
   border: 0 solid #dee2e6;
 }
 
-.page-link:hover {
+.page-link:hover, .page-link.active {
   z-index: 2;
   color: #fff;
   text-decoration: none;
@@ -10192,6 +10192,82 @@ input:focus-visible {
 [type="checkbox"]:not(:checked):focus+label:before {
   border: 1px solid #f0582f;
 }
+
+/* Base for label styling */
+[type="radio"]:not(:checked),
+[type="radio"]:checked {
+  position: absolute;
+  left: -9999px;
+}
+
+[type="radio"]:not(:checked)+label,
+[type="radio"]:checked+label {
+  position: relative;
+  padding-left: 1.95em;
+  cursor: pointer;
+}
+
+/* radio aspect */
+[type="radio"]:not(:checked)+label:before,
+[type="radio"]:checked+label:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 1px;
+  width: 18px;
+  height: 18px;
+  border: 1px solid #ccc;
+  background: #fff;
+  border-radius: 4px;
+}
+
+/* checked mark aspect */
+[type="radio"]:not(:checked)+label:after,
+[type="radio"]:checked+label:after {
+  content: "\2713\0020";
+  position: absolute;
+  top: 0.15em;
+  left: 0.22em;
+  font-size: 1.3em;
+  line-height: 0.8;
+  color: #f0582f;
+  transition: all 0.2s;
+  font-family: "Lucida Sans Unicode", "Arial Unicode MS", Arial;
+}
+
+/* checked mark aspect changes */
+[type="radio"]:not(:checked)+label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+
+[type="radio"]:checked+label:after {
+  opacity: 1;
+  transform: scale(1);
+}
+
+/* disabled radio */
+[type="radio"]:disabled:not(:checked)+label:before,
+[type="radio"]:disabled:checked+label:before {
+  box-shadow: none;
+  border-color: #bbb;
+  background-color: #ddd;
+}
+
+[type="radio"]:disabled:checked+label:after {
+  color: #999;
+}
+
+[type="radio"]:disabled+label {
+  color: #aaa;
+}
+
+/* accessibility */
+[type="radio"]:checked:focus+label:before,
+[type="radio"]:not(:checked):focus+label:before {
+  border: 1px solid #f0582f;
+}
+
 
 #myBtn {
   display: none;
@@ -19999,6 +20075,7 @@ body,
   position: relative;
   text-align: center;
   display: flex;
+  height: 250px;
   align-items: center;
 }
 
@@ -21135,7 +21212,7 @@ body,
   display: flex;
   padding: 20px 15px 20px 15px;
   position: relative;
-  top: -175px;
+  top: -65px;
   -webkit-box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.09);
   -moz-box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.09);
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.09);
@@ -22544,10 +22621,12 @@ body,
 /*--------------------------------------------------------------
 13.1.6. Books & Media --- List View
 --------------------------------------------------------------*/
-.books-media-list {
-  padding: 135px 0 100px;
+.books-media-list{
+  padding: 135px 0 50px;
 }
-
+.books-media-list input[type="checkbox"], .books-media-list input[type="radio"]{
+  display: none;
+}
 @media (max-width: 991.98px) {
   .books-media-list {
     padding: 70px 0 50px;
@@ -22850,7 +22929,6 @@ body,
 
 .books-media-listing .single-book-media .book-thumb {
   position: relative;
-  margin: 0 -1px;
   width: 100%;
 }
 
@@ -22872,6 +22950,18 @@ body,
   font-size: 13px;
   line-height: 13px;
   text-transform: uppercase;
+}
+.book-thumb img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+.book-thumb {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    background-color: #fff;
 }
 
 .books-media-listing .single-book-media .book-detail {
@@ -22939,7 +23029,7 @@ body,
 
 .books-media-listing .single-book-media .book-detail .card-links {
   position: absolute;
-  bottom: -68px;
+  bottom: -15px;
   left: 0;
   width: 100%;
   padding: 20px 20px 30px;
@@ -23314,7 +23404,7 @@ body,
 }
 
 .staffpick-box .staffpick-carousel .single-book-media:hover .book-detail .book-detail-hover {
-  transform: translateY(-54px);
+  transform: translateY(-100px);
 }
 
 .staffpick-box .staffpick-carousel .single-book-media:hover .card-links {
