--- a/online-library-management-system/Views/Items/Index.cshtml
+++ b/online-library-management-system/Views/Items/Index.cshtml
@@ -25,66 +25,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <form method="post" asp-action="Filter">
-                                <div class="event-search-filter">
-                                    <input type="text" name="search" placeholder="Search by Title, Author, or ISBN" value="@Model.Search"  />
-                                    <button type="submit" class="btn btn-secondary">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </div>
-                            </form>
+                            <partial name="_SearchPartial" />
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col-md-12 col-lg-3">
                             <aside id="secondary" class="sidebar widget-area" data-accordion-group>
-                                <form method="post" asp-action="Filter">
-                                    <div class="button-group mb-4">
-                                        <button type="submit" class="btn btn-secondary">Filter</button>
-                                        <a href="@Url.Action("Index")" class="btn btn-secondary">Reset</a>
-                                    </div>
-                                    <div class="widget widget_related_search" data-accordion-group="">
-                                        <div data-content>
-                                            <div class="single-data-accordion open" data-accordion>
-                                                <h5 class="widget-sub-title" data-control>Categories</h5>
-                                                <div class="widget_checkbox_list" data-content>
-                                                    @foreach (var category in Model.Categories!)
-                                                    {
-                                                        <div class="form-group">
-                                                            <input type="checkbox" id="category-@category.Text" class="form-check-input" name="selectedCategories[]" value="@category.Text" @(Model.SelectedCategories?.Contains(category.Text) == true ? "checked" : "") />
-                                                            <label class="form-check-label" for="category-@category.Text">@category.Text</label>
-                                                        </div>
-                                                    }
-                                                </div>
-                                            </div>
-                                            <div class="single-data-accordion open" data-accordion>
-                                                <h5 class="widget-sub-title" data-control>Type</h5>
-                                                <div class="widget_checkbox_list" data-content>
-                                                    <div class="form-group">
-                                                        <input type="checkbox" id="itemType-Book" class="form-check-input" name="selectedItemTypes[]" value="Book" @(Model.SelectedItemTypes?.Contains("Book") == true ? "checked" : "") />
-                                                        <label class="form-check-label" for="itemType-Book">Books</label>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <input type="checkbox" id="itemType-CD" class="form-check-input" name="selectedItemTypes[]" value="CD" @(Model.SelectedItemTypes?.Contains("CD") == true ? "checked" : "") />
-                                                        <label class="form-check-label" for="itemType-CD">CDs</label>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="single-data-accordion open" data-accordion>
-                                                <h5 class="widget-sub-title" data-control>Availability</h5>
-                                                <div class="widget_checkbox_list" data-content>
-                                                    <div class="form-group">
-                                                        <input type="radio" id="availability-Yes" class="form-check-input" name="availability" value="Yes" @(Model.Availability?.Contains("Yes") == true ? "checked" : "") />
-                                                        <label class="form-check-label" for="availability-Yes">Available to Borrow</label>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </form>
+                                <partial name="_FiltersPartial" />
                             </aside>
                         </div>
 
@@ -114,8 +62,8 @@
                                                         </a>
                                                         @if (item.Availability == "Yes")
                                                         {
-                                                            <a href="@Url.Action("Borrow", new { id = item.ItemId })" class="btn btn-primary btn-block">
-                                                                Borrow
+                                                            <a asp-controller="Items" asp-action="Reserve" asp-route-id="@item.ItemId" class="btn btn-primary btn-block">
+                                                                Reserve a Book
                                                             </a>
                                                         }
                                                         else
