--- a/online-library-management-system/wwwroot/css/style.css
+++ b/online-library-management-system/wwwroot/css/style.css
@@ -22951,12 +22951,13 @@ body,
   line-height: 13px;
   text-transform: uppercase;
 }
-.book-thumb img {
+.books-media-listing .single-book-media .book-thumb img,
+.books-media-grid-listing .single-book-media .book-thumb img {
     width: 100%;
     height: 350px;
     object-fit: cover;
 }
-.book-thumb {
+.books-media-listing .single-book-media .book-thumb {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23760,7 +23761,6 @@ body,
 .books-media-detail-v1 .single-book-media .book-detail {
   border: 1px solid #edf0f5;
   position: relative;
-  height: 100%;
   width: calc(100% - 306px);
   -moz-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
@@ -23790,10 +23790,7 @@ body,
 .books-media-detail-v1 .single-book-media .book-detail .book-media-title {
   color: #282828;
   font-size: 25px;
-  margin-bottom: 8px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
+  margin-bottom: 20px;
   -webkit-line-clamp: 1;
   line-clamp: 1;
   /* number of lines to show */
@@ -23856,26 +23853,13 @@ body,
 }
 
 .books-media-detail-v1 .single-book-media .book-detail .item-info ul {
-  display: grid;
-  grid-auto-flow: column;
   padding: 0;
   margin: 0;
   list-style: none;
 }
-
-.books-media-detail-v1 .single-book-media .book-detail .item-info ul li {
-  color: #717171;
-  font-size: 13px;
-  font-weight: 400;
-  font-family: "Poppins", sans-serif;
-}
-
-.books-media-detail-v1 .single-book-media .book-detail .item-info ul li strong {
-  color: #282828;
+.books-media-detail-v1 .single-book-media .book-detail .item-info ul li{
   display: block;
-  font-size: 14px;
-  font-weight: 500;
-  padding: 5px 0 14px;
+  margin-bottom: 10px;
 }
 
 .books-media-detail-v1 .single-book-media .book-detail p {
@@ -24070,28 +24054,7 @@ body,
     margin-bottom: 12px;
   }
 
-  .books-media-detail-v1 .single-book-media .book-detail .item-info ul {
-    display: grid;
-    grid-auto-flow: column;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-  }
-
-  .books-media-detail-v1 .single-book-media .book-detail .item-info ul li {
-    color: #717171;
-    font-size: 13px;
-    font-weight: 400;
-    font-family: "Poppins", sans-serif;
-  }
-
-  .books-media-detail-v1 .single-book-media .book-detail .item-info ul li strong {
-    color: #282828;
-    display: block;
-    font-size: 14px;
-    font-weight: 500;
-    padding: 5px 0 14px;
-  }
+ 
 
   .books-media-detail-v1 .single-book-media .book-detail p {
     color: #2f2f2f;
@@ -24251,14 +24214,7 @@ body,
 }
 
 @media (max-width: 575.98px) {
-  .books-media-detail-v1 .single-book-media .book-detail .item-info ul {
-    grid-auto-flow: row;
-  }
 
-  .books-media-detail-v1 .single-book-media .book-detail .item-info ul li strong {
-    display: inline-block;
-    margin-left: 7px;
-  }
 
   .books-media-detail-v1 .single-book-media .book-detail .item-social-review ul li {
     font-size: 11px;
