--- a/online-library-management-system/Views/Home/Index.cshtml
+++ b/online-library-management-system/Views/Home/Index.cshtml
@@ -61,6 +61,9 @@
                     resources we have to offer. At Sydenham Library, we believe that learning should be a
                     lifelong adventure, and we are here to guide you every step of the way.
                 </p>
+                <div class="center-content">
+                    <a asp-controller="Contact" asp-action="Index" class="btn btn-primary">Leave a message <span></span></a>
+                </div>
             </div>
         </div>
     </div>
