--- a/online-library-management-system/Views/Shared/_Layout.cshtml
+++ b/online-library-management-system/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
     <!-- Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet" type="text/css" />
 
+    <!-- Include SweetAlert2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css" rel="stylesheet">
+
+    <!-- jQuery Latest Version 1.x -->
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -109,9 +115,6 @@
         </div>
     </footer>
     <!-- End: Footer -->
-    <!-- jQuery Latest Version 1.x -->
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-
     <!-- jQuery UI -->
     <script src="~/js/jquery-ui.min.js"></script>
 
@@ -157,6 +160,9 @@
 
     <!-- Testimonial Home Page V3 -->
     <script src="~/js/card-slider-min.js"></script>
+
+    <!-- Include SweetAlert2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Custom Scripts -->
     <script src="~/js/main.js"></script>
