--- a/online-library-management-system/Views/Items/Details.cshtml
+++ b/online-library-management-system/Views/Items/Details.cshtml
@@ -1,7 +1,10 @@
 ﻿@model online_library_management_system.ViewModels.ItemVM
 
 @{
-    var item = Model.Items!.FirstOrDefault(); 
+    var item = Model.Items!.FirstOrDefault();
+    var swalType = TempData["SwalType"]?.ToString();
+    var swalMessage = TempData["SwalMessage"]?.ToString();
+
     ViewData["Title"] = "Books & CDs";
 }
 <!-- Start: Page Banner -->
@@ -40,7 +43,7 @@
 
                         <div class="col-md-12 col-lg-9">
                             @if (item != null)
-                                {
+                            {
                                 <div class="books-media-detail-v1">
                                     <div class="row">
                                         <div class="col-md-12">
@@ -64,15 +67,15 @@
                                                     <p>@item.Description</p>
                                                     <div class="card-links">
                                                         @if (item.Availability == "Yes")
-                                                            {
+                                                        {
                                                             <a asp-controller="Items" asp-action="Reserve" asp-route-id="@item.ItemId" class="btn btn-primary">
                                                                 Reserve a Book
                                                             </a>
-                                                            }
-                                                            else
-                                                            {
+                                                        }
+                                                        else
+                                                        {
                                                             <button class="btn btn-secondary" disabled>Not Available</button>
-                                                            }
+                                                        }
                                                     </div>
                                                 </div>
                                             </div>
@@ -80,8 +83,8 @@
                                         </div>
                                     </div>
                                 </div>
-                                }
-                            </div>
+                            }
+                        </div>
                     </div>
                 </div>
 
@@ -90,3 +93,20 @@
     </div>
 </div>
 <!-- End: Books & Media Section -->
+
+
+@if (!string.IsNullOrEmpty(swalType) && !string.IsNullOrEmpty(swalMessage))
+{
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function () {
+            Swal.fire({
+                icon: '@swalType',
+                title: 'Reservation Status',
+                text: '@swalMessage',
+                showConfirmButton: false,
+                timer: 5000,
+                timerProgressBar: true
+            });
+        });
+    </script>
+}
