--- a/online-library-management-system/Views/Shared/_LoginPartial.cshtml
+++ b/online-library-management-system/Views/Shared/_LoginPartial.cshtml
@@ -15,7 +15,7 @@
     }
     else
     {
-        <a class="btn btn-default" asp-action="Reservations" asp-controller="Account">Reservations</a>
+        <a class="btn btn-default" asp-action="MyReservations" asp-controller="Items">My Reservations</a>
 
     }
     <a class="btn btn-default" asp-action="Logout" asp-controller="Account">Logout</a>
