--- a/online-library-management-system/Views/Items/Details.cshtml
+++ b/online-library-management-system/Views/Items/Details.cshtml
@@ -102,7 +102,7 @@
             Swal.fire({
                 icon: '@swalType',
                 title: 'Reservation Status',
-                text: '@swalMessage',
+                html: '@swalMessage',
                 showConfirmButton: false,
                 timer: 5000,
                 timerProgressBar: true
