--- a/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/online-library-management-system/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -28,6 +28,20 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.3.0/dist/select2-bootstrap-5-theme.min.css" />
+    <!-- Vendor JS -->
+    <script src="~/admin/js/vendors.min.js"></script>
+
+
+    <script src="~/admin/assets/vendor_components/datatable/datatables.min.js"></script>
+
+    <script>
+
+        $(function () {
+            "use strict";
+            $('#datatable').DataTable();
+        });
+
+    </script>
 
 </head>
 <body class="hold-transition light-skin sidebar-mini theme-primary fixed">
@@ -118,6 +132,12 @@
                                     <span>Authors/Artists</span>
                                 </a>
                             </li>
+                            <li>
+                                <a asp-area="Admin" asp-action="Index" asp-controller="Reservation">
+                                    <i class="glyphicon glyphicon-calendar"><span class="path1"></span><span class="path2"></span></i>
+                                    <span>Reservations</span>
+                                </a>
+                            </li>
                             <li class="treeview">
                                 <a href="#">
                                     <i class="icon-Write"><span class="path1"></span><span class="path2"></span></i>
@@ -163,12 +183,8 @@
     </div>
     <!-- ./wrapper -->
     <!-- Page Content overlay -->
-    <!-- Vendor JS -->
-    <script src="~/admin/js/vendors.min.js"></script>
     <script src="~/admin/js/pages/chat-popup.js"></script>
     <script src="~/admin/assets/icons/feather-icons/feather.min.js"></script>
-
-    <script src="~/admin/assets/vendor_components/datatable/datatables.min.js"></script>
 
     <script src="~/admin/assets/vendor_components/Magnific-Popup-master/dist/jquery.magnific-popup.min.js"></script>
     <script src="~/admin/assets/vendor_components/Magnific-Popup-master/dist/jquery.magnific-popup-init.js"></script>
@@ -220,10 +236,7 @@
             "hideMethod": "fadeOut"
         };
 
-        $(function () {
-            "use strict";
-            $('#datatable').DataTable();
-        });
+        
 
 
         document.addEventListener('DOMContentLoaded', function () {
